--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,7 @@
 .button {
   border: none;
   border-radius: var(--card-radius);
-  padding: 5px 8px;
+  padding: 7px 15px;
   outline: none;
   background-color: var(--background-color);
 
@@ -9,6 +9,9 @@
   font-size: 18px;
   box-shadow: var(--card-shadow);
   transition: all 250ms;
+  min-width: max-content;
+  height: min-content;
+  /* width: 100%; */
 }
 
 .button:not(:last-child) {
@@ -18,4 +21,5 @@
 .button:hover {
   box-shadow: var(--card-hover-shadow);
   background: var(--background-hover-style);
+  color: rgb(0, 0, 0);
 }
