--- a/src/components/Section/Section.module.css
+++ b/src/components/Section/Section.module.css
@@ -1,22 +1,17 @@
 .section {
-  position: relative;
   padding: 20px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .container {
-  padding: 30px 0;
-  min-width: 420px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 0 20px;
+  position: relative;
+  min-width: 360px;
+  max-width: 800px;
+  padding: 0 10px;
+  margin: 0 auto;
 }
 
 .title {
-  color: var(--font-primary-color);
+  color: rgb(255, 255, 175);
   font-size: 30px;
   margin-bottom: 20px;
   text-align: center;
