--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
   --font-seconary-color: rgb(160, 160, 160);
 }
 
+html {
+  scrollbar-color: rgb(110, 110, 110) rgb(32, 32, 32);
+  scrollbar-width: thin;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
@@ -17,6 +22,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(32, 32, 32);
+  overflow-y: overlay;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(110, 110, 110);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(97, 98, 0);
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
 }
 
 code {
